--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,70 @@
     transform: rotate(360deg);
   }
 }
+
+.todoList{
+  list-style: none;
+  padding: 0px;
+}
+.todoElements{
+  padding:15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.todoElements label{
+  padding: 5px;
+}
+
+.title{
+  color: rgb(255, 145, 0);
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+body{
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.container{
+  padding:5%;
+  align-content: center;
+}
+ul{
+  list-style: none;
+}
+ul li {
+  align-content: center;
+}
+.container input{
+  margin:0.5%;
+  padding:1%;
+  font-weight:bold;
+  border:1px solid black;
+}
+.container input[type="text"]{
+  padding:1%;
+  margin:0.5%;
+}
+.task{
+  padding:0;
+  margin:0;
+  text-align: center;
+  color:black;
+  list-style: none;
+  font-size: 1em; 
+  float:left;
+}
+.tasks ul li span input{
+  padding: 0.5%;
+}
+ button{
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight:bold;
+  border:2px solid gray;
+  padding: 10px;
+}
+input[type="text"] {
+  padding:5px;
+}
+button:hover{
+  cursor: pointer;
+}
