--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,16 @@ ul li {
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight:bold;
   border:2px solid gray;
-  padding: 10px;
+  padding: 0.5%;
 }
 input[type="text"] {
   padding:5px;
 }
 button:hover{
   cursor: pointer;
+}
+button{
+  margin-right: 10px;
+  border-radius:5px;
+  padding:0px 5px;
 }
