--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,8 @@ ul li {
   margin:0.5%;
   padding:1%;
   font-weight:bold;
-  border:1px solid black;
+  border:2px solid grey;
+  border-radius: 5px;
 }
 .container input[type="text"]{
   padding:1%;
@@ -106,5 +107,5 @@ button:hover{
 button{
   margin-right: 10px;
   border-radius:5px;
-  padding:0px 5px;
+  padding:2px 5px;
 }
